# nonlinear-d2nn

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  artifacts.py  d2nn.py  export_fmnist5_phaseonly_aligned_final.py  export_phase_plate.py  pyproject.toml  tasks.py  test_out_cmd.txt  test_output.txt  train.py  train_core.py  visualize.py
.github/workflows/: python-ci.yml
checkpoints_proxy/: best_fashion_mnist.fashion_mnist_incoherent_back_5ep_size100_seed42_post_rs_fft_proxy.json  best_fashion_mnist.fashion_mnist_incoherent_back_5ep_size100_seed42_post_rs_fft_proxy.pth  best_fashion_mnist.fashion_mnist_phase_only_5ep_size100_seed42_post_rs_fft_proxy.json  best_fashion_mnist.fashion_mnist_phase_only_5ep_size100_seed42_post_rs_fft_proxy.pth
docs/: INDEX.md
docs/Reproduction/: README.md  code-denoise-plan.md  lin-2018-main-log.md  nonlinear-layer-plan.md
docs/baselines/: fashion-mnist-phase-only-5layer-baseline.md  fashion-mnist-phase-only-5layer-physics-aligned.md
docs/baselines/fashion-mnist-phase-only-5layer-phase-masks/: layer_01_phase_rad.csv  layer_01_phase_wrapped_rad.csv  layer_02_phase_rad.csv  layer_02_phase_wrapped_rad.csv  layer_03_phase_rad.csv  layer_03_phase_wrapped_rad.csv  (+4 more)
docs/fabrication/: fashion-mnist-phase-only-lab-handoff.md  fashion-mnist-phase-only-lightpath-protocol.md  lab-single-layer-workflow.md
docs/official-artifacts/: README.md  download-audit-2026-04-07.md
fabrication/: fmnist5-phaseonly-aligned.lab.template.json
reports/post_rs_retrain/: summarize_runs.py
tests/: conftest.py  test_d2nn_core.py
(+49 files in other folders)
